# os-syncronization

./: .required.json  README.md  safeStopSign.c  syncUtils.c
a2/: .gitignore  CMakeLists.txt  safeStopSign.c  safeStopSign.h  safeTrafficLight.c  safeTrafficLight.h  stopSign.c  stopSign.h  syncUtils.c  syncUtils.h  testing.c
